--- a/index.html
+++ b/index.html
@@ -121,7 +121,9 @@
             <div class="section">
               
                 <p><a href="https://pypi.org/project/imdby"><img alt="PyPI Version" src="https://img.shields.io/pypi/v/imdby.svg" /></a>
-<a href="https://coveralls.io/github/santhoshse7en/imdby?branch=master"><img alt="Coverage Status" src="https://coveralls.io/repos/github/santhoshse7en/imdby/badge.svg?branch=master" /></a></p>
+<a href="https://coveralls.io/github/santhoshse7en/imdby?branch=master"><img alt="Coverage Status" src="https://coveralls.io/repos/github/santhoshse7en/imdby/badge.svg?branch=master" /></a>
+<a href="https://pypi.python.org/pypi/imdby/"><img alt="License" src="https://img.shields.io/pypi/l/imdby.svg" /></a>
+<a href="https://santhoshse7en.github.io/imdby_doc"><img alt="Documentation Status" src="https://readthedocs.org/projects/pip/badge/?version=latest&amp;style=flat" /></a></p>
 <h2 id="getting-started">Getting started</h2>
 <h2 id="welcome-to-imdby">Welcome to imdby</h2>
 <p>imdby is a Python3 library! <a href="https://github.com/santhoshse7en/imdby">View on Github here</a>.</p>
@@ -206,5 +208,5 @@ for i in range(len(details.genre)):
 
 <!--
 MkDocs version : 1.0.4
-Build Date UTC : 2019-05-21 18:00:03
+Build Date UTC : 2019-05-22 05:51:16
 -->
