--- a/index.html
+++ b/index.html
@@ -127,6 +127,28 @@
 <h2 id="getting-started">Getting started</h2>
 <h2 id="welcome-to-imdby">Welcome to imdby</h2>
 <p>imdby is a Python3 library! <a href="https://github.com/santhoshse7en/imdby">View on Github here</a>.</p>
+<table>
+<thead>
+<tr>
+<th>Source</th>
+<th>Link</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>PyPI:</td>
+<td>https://pypi.org/project/imdby/</td>
+</tr>
+<tr>
+<td>Repository:</td>
+<td>https://github.com/santhoshse7en/imdby/</td>
+</tr>
+<tr>
+<td>Documentation:</td>
+<td>https://santhoshse7en.github.io/imdby_doc/</td>
+</tr>
+</tbody>
+</table>
 <h2 id="main-features">Main Features</h2>
 <ul>
 <li>
@@ -208,5 +230,5 @@ for i in range(len(details.genre)):
 
 <!--
 MkDocs version : 1.0.4
-Build Date UTC : 2019-05-22 05:51:16
+Build Date UTC : 2019-05-22 05:55:04
 -->
