--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 <h2 id="main-features">Main Features</h2>
 <ul>
 <li>
-<p>imdby is a Python package useful to retrieve and manage the data of the IMDb movie database about movies, people, characters and companies.</p>
+<p>imdby is a Python package useful to retrieve and manage the data of the IMDb movie database about movies, people, characters and companies. Sentiment Analysis for IMDb user reviews are included</p>
 </li>
 <li>
 <p>Platform-independent and written in Python 3 it can retrieve data from both the IMDb's web server and a local copy of the whole database.</p>
@@ -230,5 +230,5 @@ for i in range(len(details.genre)):
 
 <!--
 MkDocs version : 1.0.4
-Build Date UTC : 2019-05-24 05:33:49
+Build Date UTC : 2019-05-24 05:40:21
 -->
