--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 <h2 id="main-features">Main features</h2>
 <ul>
 <li>
-<p><strong>imdby</strong> is a Python package useful to retrieve and manage the data of the IMDb movie database about movies, people, characters and companies. Sentiment Analysis for IMDb user reviews are included.</p>
+<p><strong>imdby</strong> is a Python package useful to retrieve and manage the data of the IMDb movie database about movies, people, characters and companies. Sentiment Analysis for IMDb user reviews is included.</p>
 </li>
 <li>
 <p><strong>imdby</strong> package can be very easily used by programmers and developers to provide access to the IMDb's data to their programs.</p>
@@ -230,5 +230,5 @@ for i in range(len(details.genre)):
 
 <!--
 MkDocs version : 1.0.4
-Build Date UTC : 2019-05-24 08:29:02
+Build Date UTC : 2019-05-24 14:25:39
 -->
