--- a/usage/index.html
+++ b/usage/index.html
@@ -316,7 +316,7 @@
 
 <h3 id="upcoming-releases-for-selected-regions">Upcoming Releases for Selected Regions</h3>
 <p>You won't need to provide configuration parameters like text to create an instance of the IMDb class.</p>
-<pre><code class="Python">&gt;&gt;&gt; from imdby.upcompany_releases import imdb
+<pre><code class="Python">&gt;&gt;&gt; from imdby.upcoming_releases import imdb
 
 &gt;&gt;&gt; upcompany_releases = imdb()
 </code></pre>
